--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --background-color: #1c2233;
+  --primary-color: #c7f229;
+  --secondary-color: #a8d80a;
+  --tertiary-color: #83ad03;
+  --fourth-color: #fcffe5;
+  --sixth-color: #ffae71;
+  --box-shadow-color: 0 2px 8px rgba(0, 0, 0, 0.1);
+  --font: Inter, sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body {
+  min-height: 100vh;
+  font-family: var(--font);
+  background-color: var(--background-color);
 }
